feat:list tachado con TS

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VList</title>
+    <title>Eventos</title>
+    <style>
+      .selected {
+        text-decoration: line-through;
+        color: gray;
+      }
+    </style>
   </head>
   <body>
-    <div id="container"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <ul id="lista-libros"></ul>
+    <script src="./src/main.ts"></script>
   </body>
 </html>
